commit error w3c modified + font file added

--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
    <body>
       <div class="loader">
          <div class="loader__symbol">
-            <img src="./images/logo/ohmyfood@2x.svg">
+            <img src="./images/logo/ohmyfood@2x.svg" alt="">
          </div>
       </div>
       <header class="header">
          <h1 class="header__logo">ohmyfood</h1>
       </header>
       <main>
-         <section class="loc">
+         <div class="loc">
             <i class="fas fa-map-marker-alt loc__icon"></i>
             <span class="loc__text">Paris, Belleville</span>
-         </section>
+         </div>
          <section class="pres">
             <h2 class="pres__title">Réservez le menu qui<br>vous convient</h2>
             <p class="pres__subtitle">
