--- a/la_note_enchantee.html
+++ b/la_note_enchantee.html
@@ -5,7 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <script src="https://kit.fontawesome.com/7d17636476.js" crossorigin="anonymous"></script>
       <link rel="stylesheet" href="./sass/style.css">
-      <title>Titre</title> 
+      <title>Menu - ohmyfood!</title> 
    </head>
    <body>
       <header class="header header--withBackArrow">
