commit modif soutenance

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <body>
       <div class="loader">
          <div class="loader__symbol">
-            <img src="./images/logo/ohmyfood@2x.svg" alt="">
+            <img src="./images/logo/ohmyfood@2x.svg" alt="Logo">
          </div>
       </div>
       <header class="header">
@@ -19,7 +19,9 @@
       <main>
          <div class="loc">
             <i class="fas fa-map-marker-alt loc__icon"></i>
-            <span class="loc__text">Paris, Belleville</span>
+            <span class="loc__text">
+            <input type="search" name="city" value="Paris, Belleville" placeholder="Votre ville">
+            </span>
          </div>
          <section class="pres">
             <h2 class="pres__title">Réservez le menu qui<br>vous convient</h2>
@@ -54,7 +56,7 @@
                <h2 class="restaurants__title">Restaurants</h2>
                <div class="cards">
                   <a class="card" href="./la_palette_du_gout.html">
-                     <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="" class="card__img">
+                     <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo" class="card__img">
                      <span class="card__badge">Nouveau</span>
                      <footer class="card__footer">
                         <div class="card__content">
@@ -68,7 +70,7 @@
                      </footer>
                   </a>
                   <a class="card" href="./la_note_enchantee.html">
-                     <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="" class="card__img">
+                     <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo" class="card__img">
                      <span class="card__badge">Nouveau</span>
                      <footer class="card__footer">
                         <div class="card__content">
@@ -82,7 +84,7 @@
                      </footer>
                   </a>
                   <a class="card" href="./a_la_francaise.html">
-                     <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="" class="card__img">
+                     <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo" class="card__img">
                      <!-- <span class="card__badge">Nouveau</span> -->
                      <footer class="card__footer">
                         <div class="card__content">
@@ -96,7 +98,7 @@
                      </footer>
                   </a>
                   <a class="card" href="./le_delice_des_sens.html">
-                     <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="" class="card__img">
+                     <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo" class="card__img">
                      <!-- <span class="card__badge">Nouveau</span> -->
                      <footer class="card__footer">
                         <div class="card__content">
