--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -14,7 +14,7 @@
             <h1 class="header__logo">ohmyfood</h1>
          </div>
       </header>
-      <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="" class="presImg">
+      <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo" class="presImg">
       <main class="menu container">
          <header class="menu__header">
             <h2 class="menu__title">La palette du goût</h2>
