--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -14,7 +14,7 @@
             <h1 class="header__logo">ohmyfood</h1>
          </div>
       </header>
-      <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="" class="presImg">
+      <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo" class="presImg">
       <main class="menu container">
          <header class="menu__header">
             <h2 class="menu__title">À la française</h2>
