--- a/le_delice_des_sens.html
+++ b/le_delice_des_sens.html
@@ -14,7 +14,7 @@
             <h1 class="header__logo">ohmyfood</h1>
          </div>
       </header>
-      <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="" class="presImg">
+      <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo" class="presImg">
       <main class="menu container">
          <header class="menu__header">
             <h2 class="menu__title">Le délice des sens</h2>
